--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
 
 <div class="container">
-    <img class="profile-pic" src="Users.yuwichang.자기소개.단국대.jpg" alt="프로필 사진">
+    <img class="profile-pic" src="단국대.jpg" alt="프로필 사진">
     <h1>안녕하세요, 제 이름은 [이름]입니다.</h1>
     <p>저는 [직업 또는 전공]로 일하고 있습니다. [흥미로운 사실이나 경험]에 대해 특별히 관심이 많습니다. [포부나 목표]을 향해 노력하는 중이며, 새로운 것을 배우고 성장하기 위해 끊임없이 노력하고 있습니다. [취미나 관심사]와 관련된 활동을 즐기며, [가족이나 친구와의 관계]를 소중히 여기고 있습니다. 함께 일하고 소통하는 것을 좋아하며, 새로운 도전에 열려있습니다.</p>
 </div>
